--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/Enfrentamientos.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/Enfrentamientos.form
@@ -222,7 +222,7 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace pref="222" max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" pref="257" max="-2" attributes="0"/>
+                  <Component id="notorneo" min="-2" pref="257" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="171" max="-2" attributes="0"/>
               </Group>
           </Group>
@@ -230,21 +230,23 @@
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace pref="18" max="32767" attributes="0"/>
-                  <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="32" max="32767" attributes="0"/>
+                  <Component id="notorneo" min="-2" pref="44" max="-2" attributes="0"/>
                   <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="notorneo">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Yu Gothic Medium" size="36" style="2"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="TORNEO X"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="9"/>
+          </AuxValues>
         </Component>
       </SubComponents>
     </Container>
